--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
                 <button class="button-add" onclick="addFriend()">Añadir</button>
             </div>
            
-            <ul id="listaAmigos" class="name-list" aria-labelledby="listaAmigos" role="list"></ul>
-            <ul id="resultado" class="result-list" aria-live="polite"></ul>
+            <ul id="listaAmigos" class="name-list" aria-labelledby="listaAmigos" role="list">
+                
+            </ul>
+            <ul id="resultado" class="result-list" aria-live="polite">
+                <li id="liresultado">Andres</li>
+            </ul>
 
             <div class="button-container">
                 <button class="button-draw" onclick="sortearAmigo()" aria-label="Sortear amigo secreto">
